--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Calcculator</title>
+    <title>Calculator</title>
   </head>
   <body>
     <h1>Calculator</h1>
     <script src = "js/scripts.js"></script>
-
   </body>
 </html>
