--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<!DOCTYPE html>
+<!-- my calc<!DOCTYPE html>
 <html>
   <head>
+    <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+          <link href="css/styles.css" rel="stylesheet" type="text/css">
+          <script src="js/jquery-3.1.1"></script>
+          <script src="js/scripts.js"></script>
     <meta charset="utf-8">
     <title>Calculator</title>
   </head>
@@ -8,4 +12,88 @@
     <h1>Calculator</h1>
     <script src = "js/scripts.js"></script>
   </body>
-</html>
+</html> -->
+
+
+<!DOCTYPE html>
+      <html>
+        <head>
+          <title>Calculator</title>
+          <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+                <link href="css/styles.css" rel="stylesheet" type="text/css">
+                <script src="js/jquery-3.1.1/jquery-3.1.1.js"></script>
+                <script src="js/scripts.js"></script>
+        </head>
+        <body>
+          <h1>CALCULATOR</h1>
+          <div class="container">
+          <h2>ADDITION</h2>
+          <form id="add">
+            <div class="form-group">
+              <label for="add1">1st number:</label>
+              <input id="add1" class="form-control" type="text">
+            </div>
+            <div class="form-group">
+              <label for="add2">2nd number:</label>
+              <input id="add2" class="form-control" type="text">
+            </div>
+            <button type="submit" class="btn">Add!</button>
+          </form>
+          <div id="outputadd">
+
+          </div><!-- close id -->
+        </div><!-- close container -->
+        <div class="container">
+        <h2>SUBTRACTION</h2>
+        <form id="subtract">
+          <div class="form-group">
+            <label for="subtract1">1st number:</label>
+            <input id="subtract1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="subtract2">2nd number:</label>
+            <input id="subtract2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn">Subtract!</button>
+        </form>
+        <div id="outputsub">
+
+        </div><!-- close id -->
+      </div><!-- close container -->
+      <div class="container">
+      <h2>MULTIPLICATION</h2>
+      <form id="multiply">
+        <div class="form-group">
+          <label for="multiply1">1st number:</label>
+          <input id="multiply1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="multiply2">2nd number:</label>
+          <input id="multiply2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Multiply!</button>
+      </form>
+      <div id="outputmult">
+
+      </div><!-- close id -->
+      </div><!-- close container -->
+      <div class="container">
+      <h2>DIVISION</h2>
+      <form id="divide">
+        <div class="form-group">
+          <label for="divide1">1st number:</label>
+          <input id="divide1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="divide2">2nd number:</label>
+          <input id="divide2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Divide!</button>
+      </form>
+      <div id="outputdiv">
+
+      </div><!-- close id -->
+      </div><!-- close container -->
+
+        </body>
+      </html>
